Change log for zeit.web
=======================

2.58 (unreleased)
-----------------

- FIX: Fix AMP validation, IVW integration and meta robots tag

- ZON-1883: Visually improve mobile plus/minus buttons

- BUG-351: Let next-article-arrows stick to the article on horizontal scroll


2.57 (2016-02-22)
-----------------

- MAINT: Add standard page padding class for infographics

- ZON-2482: Add ZCO footer

- MAINT: Fix position of ad place 1 in AMP articles

- HOTFIX: Re-enable ranking area to hide curated content (was broken in 2.56)

- ZON-2481: Add ZEIT Campus header + main navigation

- ZON-2778: Add ZEIT Campus navigation flyout

- MAINT: Edgesideinclude login-state for campus and magazin

- ZON-2481: Edgesideinclude login-state for campus and magazin

- ZON-2637: Enable ad-label on framebuilder

- ZON-2636: Framebuilder: Add query parameters `hide_ressorts` and `hide_search`

- ZON-2772: Ad tags for AMP article

- ZON-2481: Implement topiclinks for all campus content types

- ZON-2780: Add ivw tracking for AMPs

- BUG-282: Join query strings for feed URLs with tracking params

- MAINT: Disuse rsynced node-comment-statistics in favor of API endpoint

- MAINT: Migrate feature toggles from view attributes to jinja global

- FIX: Don't accidentally create missing image variants in ZMO


2.56.3 (2016-02-19)
-------------------

- HOTFIX: Avoid collapsing of margins in author list


2.56.2 (2016-02-18)
-------------------

- PERF: Enable solr proxy for author list


2.56.1 (2016-02-17)
-------------------

- HOTFIX: Pagination for author index


2.56 (2016-02-17)
-----------------

- ZON-2507: Implement zeit campus groundwork (behind a feature toggle)

- ZON-2806: Add product.title as author fallback to AMPages

- ZON-2581: Track ad start events to webtrekk

- ZON-2805: Load distinct brightcove player in AMPages

- ZON-2807: Validate AMP microdata

- ZON-2838: Author index with teasers and alphabetical navigation
