@@ -305,7 +305,8 @@ class InstantArticle(Article):
         except zeit.web.core.jinja.Interrupt, err:
             log.debug('Contained article block_type %s not implemented.' % (
                 zeit.web.core.template.block_type(err.message)))
-            return pyramid.response.Response(status_code=501)
+            return pyramid.response.Response(
+                headerlist=[('X-Interrupt', 'true')])
 
     @zeit.web.reify
     def authors(self):
@@ -325,8 +326,10 @@ class InstantArticleItem(Article):
 
     def __call__(self):
         if not getattr(self.request, 'wrapped_response', None) or (
-                self.request.wrapped_response.status_code == 501):
-            return pyramid.response.Response(status_code=501)
+                'X-Interrupt', 'true') in (
+                    self.request.wrapped_response.headerlist):
+            return pyramid.response.Response(
+                headerlist=[('X-Interrupt', 'true')])
 
         metadata = zeit.cms.content.interfaces.ICommonMetadata(self.context)
 
