@@ -10,6 +10,8 @@ Change log for zeit.web
 
 - BUG-351: Let next-article-arrows stick to the article on horizontal scroll
 
+- FIX: Return an empty 200 response (instead of 501) for rendering interrupts
+
 
 2.57 (2016-02-22)
 -----------------
